Add Chapter 3 discussion and remaining references

--- a/source/bibliography/bib/Sim_n_2012.bib
+++ b/source/bibliography/bib/Sim_n_2012.bib
@@ -1,14 +1,14 @@
 @article{Sim_n_2012,
- author = {Sim{\'{o}}n, Oihane and Williams, Trevor and L{\'{o}}pez-Ferber, Miguel and Caballero, Primitivo},
- title = {Deletion of egt is responsible for the fast-killing phenotype of natural deletion genotypes in a Spodoptera frugiperda multiple nucleopolyhedrovirus population},
+ author = {Sim{\'{o}}n, Oihane and Palma, Leopoldo and Williams, Trevor and L{\'{o}}pez-Ferber, Miguel and Caballero, Primitivo},
+ title = {Analysis of a naturally-occurring deletion mutant of Spodoptera frugiperda multiple nucleopolyhedrovirus reveals sf58 as a new per os infectivity factor of lepidopteran-infecting baculoviruses},
  journal = {Journal of Invertebrate Pathology},
  publisher = {Elsevier {BV}},
  year = {2012},
- month = {nov},
- number = {3},
- volume = {111},
- pages = {260--263},
- url = {https://doi.org/10.1016%2Fj.jip.2012.08.013},
- doi = {10.1016/j.jip.2012.08.013}
+ month = {jan},
+ number = {1},
+ volume = {109},
+ pages = {117--126},
+ url = {https://doi.org/10.1016%2Fj.jip.2011.10.010},
+ doi = {10.1016/j.jip.2011.10.010}
 }
 
