--- a/source/references.bib
+++ b/source/references.bib
@@ -164,6 +164,19 @@
  doi = {10.1093/jee/toy342}
 }
 
+@article{Beperet_2015,
+ author = {Beperet, Inés and Simón, Oihane and Williams, Trevor and López-Ferber, Miguel and Caballero, Primitivo},
+ title = {The “11K” gene family members sf68, sf95 and sf138 modulate transmissibility and insecticidal properties of Spodoptera frugiperda multiple nucleopolyhedrovirus},
+ journal = {Journal of Invertebrate Pathology},
+ publisher = {Elsevier BV},
+ year = {2015},
+ month = {may},
+ volume = {127},
+ pages = {101--109},
+ url = {https://doi.org/10.1016%2Fj.jip.2015.03.008},
+ doi = {10.1016/j.jip.2015.03.008}
+}
+
 @article{Bernardi_2015,
  author = {Bernardi, Daniel and Salmeron, Eloisa and Horikoshi, Renato Jun and Bernardi, Oderlei and Dourado, Patrick Marques and Carvalho, Renato Assis and Martinelli, Samuel and Head, Graham P. and Omoto, Celso},
  title = {Cross-Resistance between Cry1 Proteins in Fall Armyworm (Spodoptera frugiperda) May Affect the Durability of Current Pyramided Bt Maize Hybrids in Brazil},
@@ -319,6 +332,19 @@
  doi = {10.1093/gbe/evv231}
 }
 
+@article{Brito_2018,
+ author = {Brito, A. F. and Melo, F. L. and Ardisson-Araújo, D. M. P. and Sihler, W. and Souza, M. L. and Ribeiro, B. M.},
+ title = {Genome-wide diversity in temporal and regional populations of the betabaculovirus Erinnyis ello granulovirus (ErelGV)},
+ journal = {BMC Genomics},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2018},
+ month = {sep},
+ number = {1},
+ volume = {19},
+ url = {https://doi.org/10.1186%2Fs12864-018-5070-6},
+ doi = {10.1186/s12864-018-5070-6}
+}
+
 @article{Burtet_2017,
  author = {Burtet, Leonardo M and Bernardi, Oderlei and Melo, Adriano A and Pes, Maiquel P and Strahl, Thiago T and Guedes, Jerson VC},
  title = {Managing fall armyworm, Spodoptera frugiperda
@@ -472,6 +498,20 @@
  pages = {684},
  url = {https://doi.org/10.3390%2Fv11080684},
  doi = {10.3390/v11080684}
+}
+
+@article{Daugherty_2012,
+ author = {Daugherty, Matthew D. and Malik, Harmit S.},
+ title = {Rules of Engagement: Molecular Insights from Host-Virus Arms Races},
+ journal = {Annual Review of Genetics},
+ publisher = {Annual Reviews},
+ year = {2012},
+ month = {dec},
+ number = {1},
+ volume = {46},
+ pages = {677--700},
+ url = {https://doi.org/10.1146%2Fannurev-genet-110711-155522},
+ doi = {10.1146/annurev-genet-110711-155522}
 }
 
 @article{Day_2017,
@@ -657,6 +697,20 @@
  doi = {10.1073/pnas.1609243114}
 }
 
+@article{Geoghegan_2018,
+ author = {Geoghegan, Jemma L. and Holmes, Edward C.},
+ title = {The phylogenomics of evolving virus virulence},
+ journal = {Nature Reviews Genetics},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2018},
+ month = {oct},
+ number = {12},
+ volume = {19},
+ pages = {756--769},
+ url = {https://doi.org/10.1038%2Fs41576-018-0055-5},
+ doi = {10.1038/s41576-018-0055-5}
+}
+
 @article{Gilbert_2014,
  author = {Gilbert, Clément and Chateigner, Aurélien and Ernenwein, Lise and Barbe, Valérie and Bézier, Annie and Herniou, Elisabeth A. and Cordaux, Richard},
  title = {Population genomics supports baculoviruses as vectors of horizontal transfer of insect transposons},
@@ -837,6 +891,16 @@
  url = {https://doi.org/10.1128%2Fjvi.01319-17},
  doi = {10.1128/jvi.01319-17},
  editor = {Pfeiffer, Julie K.}
+}
+
+@article{Hill_2020,
+ author = {Hill, Tom and Unckless, Robert L.},
+ title = {Recurrent evolution of two competing haplotypes in an insect DNA virus},
+ publisher = {Cold Spring Harbor Laboratory},
+ year = {2020},
+ month = {may},
+ url = {https://doi.org/10.1101%2F2020.05.14.096024},
+ doi = {10.1101/2020.05.14.096024}
 }
 
 @article{Hoang_2017,
@@ -1245,6 +1309,33 @@ in China and comparisons with other noctuid larvae in cornfields using molecular
  pages = {R84},
  url = {https://doi.org/10.1186%2Fgb-2014-15-6-r84},
  doi = {10.1186/gb-2014-15-6-r84}
+}
+
+@article{Leeks_2018,
+ author = {Leeks, Asher and Segredo-Otero, Ernesto A and Sanjuán, Rafael and West, Stuart A},
+ title = {Beneficial coinfection can promote within-host viral diversity},
+ journal = {Virus Evolution},
+ publisher = {Oxford University Press (OUP)},
+ year = {2018},
+ month = {jul},
+ number = {2},
+ volume = {4},
+ url = {https://doi.org/10.1093%2Fve%2Fvey028},
+ doi = {10.1093/ve/vey028}
+}
+
+@article{Lei_2020,
+ author = {Lei, Chengfeng and Yang, Jian and Wang, Jia and Hu, Jia and Sun, Xiulian},
+ title = {Molecular and Biological Characterization of Spodoptera frugiperda Multiple Nucleopolyhedrovirus Field Isolate and Genotypes from China},
+ journal = {Insects},
+ publisher = {MDPI AG},
+ year = {2020},
+ month = {nov},
+ number = {11},
+ volume = {11},
+ pages = {777},
+ url = {https://doi.org/10.3390%2Finsects11110777},
+ doi = {10.3390/insects11110777}
 }
 
 @article{Leroy_2016,
@@ -1715,6 +1806,20 @@ Spodoptera frugiperda
  doi = {10.1093/bioinformatics/bts378}
 }
 
+@article{Rawlings_2013,
+ author = {Rawlings, Neil D. and Waller, Matthew and Barrett, Alan J. and Bateman, Alex},
+ title = {MEROPS: the database of proteolytic enzymes, their substrates and inhibitors},
+ journal = {Nucleic Acids Research},
+ publisher = {Oxford University Press (OUP)},
+ year = {2013},
+ month = {oct},
+ number = {D1},
+ volume = {42},
+ pages = {D503--D509},
+ url = {https://doi.org/10.1093%2Fnar%2Fgkt953},
+ doi = {10.1093/nar/gkt953}
+}
+
 @article{Renner_2017,
  author = {Renner, Daniel W. and Szpara, Moriah L.},
  title = {Impacts of Genome-Wide Analyses on Our Understanding of Human Herpesvirus Diversity and Evolution},
@@ -1727,6 +1832,33 @@ Spodoptera frugiperda
  url = {https://doi.org/10.1128%2Fjvi.00908-17},
  doi = {10.1128/jvi.00908-17},
  editor = {Glaunsinger, Britt A.}
+}
+
+@article{Rezelj_2018,
+ author = {Rezelj, Veronica V and Levi, Laura I and Vignuzzi, Marco},
+ title = {The defective component of viral populations},
+ journal = {Current Opinion in Virology},
+ publisher = {Elsevier BV},
+ year = {2018},
+ month = {dec},
+ volume = {33},
+ pages = {74--80},
+ url = {https://doi.org/10.1016%2Fj.coviro.2018.07.014},
+ doi = {10.1016/j.coviro.2018.07.014}
+}
+
+@article{Rodrigues_2020,
+ author = {Rodrigues, Daniela T. and Peterson, Lenen and de Oliveira, Lucas Boeni and Sosa-Gómez, Daniel R. and Ribeiro, Bergmann Morais and Ardisson-Araújo, Daniel M. P.},
+ title = {Characterization of a novel alphabaculovirus isolated from the Southern armyworm, Spodoptera eridania (Cramer, 1782) (Lepidoptera: Noctuidae) and the evolution of odv-e66, a bacterium-acquired baculoviral chondroitinase gene},
+ journal = {Genomics},
+ publisher = {Elsevier BV},
+ year = {2020},
+ month = {nov},
+ number = {6},
+ volume = {112},
+ pages = {3903--3914},
+ url = {https://doi.org/10.1016%2Fj.ygeno.2020.06.047},
+ doi = {10.1016/j.ygeno.2020.06.047}
 }
 
 @article{Rohrmann_2014,
@@ -1840,10 +1972,24 @@ Spodoptera frugiperda
 }
 
 @article{Sim_n_2012,
- author = {Sim{\'{o}}n, Oihane and Williams, Trevor and L{\'{o}}pez-Ferber, Miguel and Caballero, Primitivo},
+ author = {Simón, Oihane and Palma, Leopoldo and Williams, Trevor and López-Ferber, Miguel and Caballero, Primitivo},
+ title = {Analysis of a naturally-occurring deletion mutant of Spodoptera frugiperda multiple nucleopolyhedrovirus reveals sf58 as a new per os infectivity factor of lepidopteran-infecting baculoviruses},
+ journal = {Journal of Invertebrate Pathology},
+ publisher = {Elsevier BV},
+ year = {2012},
+ month = {jan},
+ number = {1},
+ volume = {109},
+ pages = {117--126},
+ url = {https://doi.org/10.1016%2Fj.jip.2011.10.010},
+ doi = {10.1016/j.jip.2011.10.010}
+}
+
+@article{Sim_n_2012a,
+ author = {Simón, Oihane and Williams, Trevor and López-Ferber, Miguel and Caballero, Primitivo},
  title = {Deletion of egt is responsible for the fast-killing phenotype of natural deletion genotypes in a Spodoptera frugiperda multiple nucleopolyhedrovirus population},
  journal = {Journal of Invertebrate Pathology},
- publisher = {Elsevier {BV}},
+ publisher = {Elsevier BV},
  year = {2012},
  month = {nov},
  number = {3},
@@ -1851,6 +1997,34 @@ Spodoptera frugiperda
  pages = {260--263},
  url = {https://doi.org/10.1016%2Fj.jip.2012.08.013},
  doi = {10.1016/j.jip.2012.08.013}
+}
+
+@article{Simo_n_2004,
+ author = {Simoń, Oihane and Williams, Trevor and Loṕez-Ferber, Miguel and Caballero, Primitivo},
+ title = {Genetic Structure of a Spodoptera frugiperda Nucleopolyhedrovirus Population: High Prevalence of Deletion Genotypes},
+ journal = {Applied and Environmental Microbiology},
+ publisher = {American Society for Microbiology},
+ year = {2004},
+ month = {sep},
+ number = {9},
+ volume = {70},
+ pages = {5579--5588},
+ url = {https://doi.org/10.1128%2Faem.70.9.5579-5588.2004},
+ doi = {10.1128/aem.70.9.5579-5588.2004}
+}
+
+@article{Simo_n_2008,
+ author = {Simoń, Oihane and Williams, Trevor and Asensio, Aaron C. and Ros, Sarhay and Gaya, Andrea and Caballero, Primitivo and Possee, Robert D.},
+ title = {Sf29 Gene of Spodoptera frugiperda Multiple Nucleopolyhedrovirus Is a Viral Factor That Determines the Number of Virions in Occlusion Bodies},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {2008},
+ month = {jun},
+ number = {16},
+ volume = {82},
+ pages = {7897--7904},
+ url = {https://doi.org/10.1128%2Fjvi.00099-08},
+ doi = {10.1128/jvi.00099-08}
 }
 
 @incollection{Slack_2006,
@@ -1988,6 +2162,20 @@ Spodoptera frugiperda
  pages = {8441--8450},
  url = {https://doi.org/10.1128%2Fjvi.01290-13},
  doi = {10.1128/jvi.01290-13}
+}
+
+@article{Th_z__2015,
+ author = {Thézé, Julien and Takatsuka, Jun and Nakai, Madoka and Arif, Basil and Herniou, Elisabeth},
+ title = {Gene Acquisition Convergence between Entomopoxviruses  and Baculoviruses},
+ journal = {Viruses},
+ publisher = {MDPI AG},
+ year = {2015},
+ month = {apr},
+ number = {4},
+ volume = {7},
+ pages = {1960--1974},
+ url = {https://doi.org/10.3390%2Fv7041960},
+ doi = {10.3390/v7041960}
 }
 
 @article{Th_z__2018,
@@ -2240,6 +2428,20 @@ Spodoptera frugiperda
  editor = {Sandri-Goldin, Rozanne M.}
 }
 
+@article{Wang_2020,
+ author = {Wang, Wenqiang and Zhao, Huayao and Han, Guan-Zhu},
+ title = {Host-Virus Arms Races Drive Elevated Adaptive Evolution in Viral Receptors},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {2020},
+ month = {jun},
+ number = {16},
+ volume = {94},
+ url = {https://doi.org/10.1128%2Fjvi.00684-20},
+ doi = {10.1128/jvi.00684-20},
+ editor = {Parrish, Colin R.}
+}
+
 @article{Weaver_2018,
  author = {Weaver, Steven and Shank, Stephen D and Spielman, Stephanie J and Li, Michael and Muse, Spencer V and Pond, Sergei L Kosakovsky},
  title = {Datamonkey 2.0: A Modern Web Application for Characterizing Selective and Other Evolutionary Processes},
@@ -2252,6 +2454,20 @@ Spodoptera frugiperda
  pages = {773--777},
  url = {https://doi.org/10.1093%2Fmolbev%2Fmsx335},
  doi = {10.1093/molbev/msx335}
+}
+
+@article{Wennmann_2017,
+ author = {Wennmann, Jörg and Radtke, Pit and Eberle, Karolin and Alletti, Gianpiero Gueli and Jehle, Johannes},
+ title = {Deciphering Single Nucleotide Polymorphisms and Evolutionary Trends in Isolates of the Cydia pomonella granulovirus},
+ journal = {Viruses},
+ publisher = {MDPI AG},
+ year = {2017},
+ month = {aug},
+ number = {8},
+ volume = {9},
+ pages = {227},
+ url = {https://doi.org/10.3390%2Fv9080227},
+ doi = {10.3390/v9080227}
 }
 
 @article{Williams_2017,
@@ -2419,6 +2635,20 @@ Spodoptera frugiperda
  url = {https://doi.org/10.1371%2Fjournal.pone.0086450},
  doi = {10.1371/journal.pone.0086450},
  editor = {Li, Yi}
+}
+
+@article{Zwart_2019,
+ author = {Zwart,  and Ali,  and Strien,  and Schijlen,  and Wang,  and Werf,  and Vlak, },
+ title = {Identification of Loci Associated with Enhanced Virulence in Spodoptera litura Nucleopolyhedrovirus Isolates Using Deep Sequencing},
+ journal = {Viruses},
+ publisher = {MDPI AG},
+ year = {2019},
+ month = {sep},
+ number = {9},
+ volume = {11},
+ pages = {872},
+ url = {https://doi.org/10.3390%2Fv11090872},
+ doi = {10.3390/v11090872}
 }
 
 
