Add figures to the draft of granulovirus cell culture chapter

--- a/source/references.bib
+++ b/source/references.bib
@@ -1,3 +1,19 @@
+@phdthesis{1,
+ author = {Biedma, and Marina Elizabeth},
+ title = {Desarrollo de un sistema de recombinación para su aplicación al estudio de determinantes genéticos que afectan la infectividad de baculovirus de interés agronómico},
+ publisher = {Universidad Nacional de La Plata},
+ url = {https://doi.org/10.35537%2F10915%2F90015},
+ doi = {10.35537/10915/90015}
+}
+
+@phdthesis{1a,
+ author = {Haase, and Santiago},
+ title = {Desarrollo de herramientas moleculares para incrementar la aplicabilidad del baculovirus de $łess$i$\greater$Anticarsia gemmatalis$łess$/i$\greater$ en el control biológico de plagas},
+ publisher = {Universidad Nacional de La Plata},
+ url = {https://doi.org/10.35537%2F10915%2F48298},
+ doi = {10.35537/10915/48298}
+}
+
 @article{_nce_2010,
  author = {{\.{I}}nce, {\. {I}}kbal Agah and Boeren, Sjef A. and van Oers, Monique M. and Vervoort, Jacques J. M. and Vlak, Just M.},
  title = {Proteomic analysis of Chilo iridescent virus},
@@ -10,6 +26,20 @@
  pages = {253--258},
  url = {https://doi.org/10.1016%2Fj.virol.2010.05.038},
  doi = {10.1016/j.virol.2010.05.038}
+}
+
+@article{Airenne_2013,
+ author = {Airenne, Kari J and Hu, Yu-Chen and Kost, Thomas A and Smith, Richard H and Kotin, Robert M and Ono, Chikako and Matsuura, Yoshiharu and Wang, Shu and Ylä-Herttuala, Seppo},
+ title = {Baculovirus: an Insect-derived Vector for Diverse Gene Transfer Applications},
+ journal = {Molecular Therapy},
+ publisher = {Elsevier BV},
+ year = {2013},
+ month = {apr},
+ number = {4},
+ volume = {21},
+ pages = {739--749},
+ url = {https://doi.org/10.1038%2Fmt.2012.286},
+ doi = {10.1038/mt.2012.286}
 }
 
 @article{Al_Sarar_2006,
@@ -40,6 +70,20 @@
  editor = {Liang, Chen}
 }
 
+@article{Alfonso_2016,
+ author = {Alfonso, Victoria and Amalfi, Sabrina and López, María Gabriela and Taboga, Oscar},
+ title = {Effects of deletion of the ac109 gene of Autographa californica nucleopolyhedrovirus on interactions with mammalian cells},
+ journal = {Archives of Virology},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2016},
+ month = {nov},
+ number = {3},
+ volume = {162},
+ pages = {835--840},
+ url = {https://doi.org/10.1007%2Fs00705-016-3142-y},
+ doi = {10.1007/s00705-016-3142-y}
+}
+
 @article{Alletti_2017,
  author = {Alletti, Gianpiero and Sauer, Annette and Weihrauch, Birgit and Fritsch, Eva and Undorf-Spahn, Karin and Wennmann, Jörg and Jehle, Johannes},
  title = {Using Next Generation Sequencing to Identify and Quantify the Genetic Composition of Resistance-Breaking Commercial Isolates of Cydia pomonella Granulovirus},
@@ -66,6 +110,21 @@
  pages = {403--410},
  url = {https://doi.org/10.1016%2Fs0022-2836%2805%2980360-2},
  doi = {10.1016/s0022-2836(05)80360-2}
+}
+
+@article{Ardisson_Ara_jo_2015,
+ author = {Ardisson-Araújo, Daniel M. P. and Melo, Fernando L. and Clem, Rollie J. and Wolff, José L. C. and Ribeiro, Bergmann M.},
+ title = {A Betabaculovirus-Encodedgp64Homolog Codes for a Functional Envelope Fusion Protein},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {2015},
+ month = {nov},
+ number = {3},
+ volume = {90},
+ pages = {1668--1672},
+ url = {https://doi.org/10.1128%2Fjvi.02491-15},
+ doi = {10.1128/jvi.02491-15},
+ editor = {McFadden, G.}
 }
 
 @article{Asser_Kaiser_2007,
@@ -162,6 +221,20 @@
  pages = {91--98},
  url = {https://doi.org/10.1093%2Fjee%2Ftoy342},
  doi = {10.1093/jee/toy342}
+}
+
+@article{Beperet_2014,
+ author = {Beperet, I. and Irons, S. L. and Simon, O. and King, L. A. and Williams, T. and Possee, R. D. and Lopez-Ferber, M. and Caballero, P.},
+ title = {Superinfection Exclusion in Alphabaculovirus Infections Is Concomitant with Actin Reorganization},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {2014},
+ month = {jan},
+ number = {6},
+ volume = {88},
+ pages = {3548--3556},
+ url = {https://doi.org/10.1128%2Fjvi.02974-13},
+ doi = {10.1128/jvi.02974-13}
 }
 
 @article{Beperet_2015,
@@ -570,6 +643,20 @@
  doi = {10.1016/j.virusres.2016.05.005}
 }
 
+@article{Dwyer_1988,
+ author = {Dwyer, Kathleen G. and Webb, Susan E. and Shelton, Anthony M. and Granados, Robert R.},
+ title = {Establishment of cell lines from Pieris rapae embryos: Characterization and susceptibility to baculoviruses},
+ journal = {Journal of Invertebrate Pathology},
+ publisher = {Elsevier BV},
+ year = {1988},
+ month = {sep},
+ number = {2},
+ volume = {52},
+ pages = {268--274},
+ url = {https://doi.org/10.1016%2F0022-2011%2888%2990135-8},
+ doi = {10.1016/0022-2011(88)90135-8}
+}
+
 @article{Eaton_2019,
  author = {Eaton, Deren A. R.},
  title = {Toytree: A minimalist tree visualization and manipulation library for Python},
@@ -583,6 +670,17 @@
  url = {https://doi.org/10.1111%2F2041-210x.13313},
  doi = {10.1111/2041-210x.13313},
  editor = {Matschiner, Michael}
+}
+
+@incollection{Eberle_2012,
+ author = {Eberle, Karolin E. and Wennmann, Jörg T. and Kleespies, Regina G. and Jehle, Johannes A.},
+ title = {Basic techniques in insect virology},
+ publisher = {Elsevier},
+ year = {2012},
+ pages = {15--74},
+ url = {https://doi.org/10.1016%2Fb978-0-12-386899-2.00002-6},
+ doi = {10.1016/b978-0-12-386899-2.00002-6},
+ booktitle = {Manual of Techniques in Invertebrate Pathology}
 }
 
 @article{Eddy_2011,
@@ -626,6 +724,17 @@
  pages = {1917--1933},
  url = {https://doi.org/10.1099%2Fvir.0.81792-0},
  doi = {10.1099/vir.0.81792-0}
+}
+
+@incollection{F__2013,
+ author = {F., Marcelo and Leticia, M. and Salvador, Ricardo and Sciocco, Alicia and Romanowski, Vctor},
+ title = {Baculovirus Gene Expression},
+ publisher = {InTech},
+ year = {2013},
+ month = {nov},
+ url = {https://doi.org/10.5772%2F56955},
+ doi = {10.5772/56955},
+ booktitle = {Current Issues in Molecular Virology - Viral Genetics and Biotechnological Applications}
 }
 
 @article{Ferrelli_2012,
@@ -767,6 +876,20 @@
  doi = {10.1016/0042-6822(81)90438-4}
 }
 
+@article{Granados_1986,
+ author = {Granados, Robert R. and Derksen, Anja C. G. and Dwyer, Kathleen G.},
+ title = {Replication of the Trichoplusia ni granulosis and nuclear polyhedrosis viruses in cell cultures},
+ journal = {Virology},
+ publisher = {Elsevier BV},
+ year = {1986},
+ month = {jul},
+ number = {2},
+ volume = {152},
+ pages = {472--476},
+ url = {https://doi.org/10.1016%2F0042-6822%2886%2990150-9},
+ doi = {10.1016/0042-6822(86)90150-9}
+}
+
 @article{Greco_2014,
  author = {Greco, Todd M. and Diner, Benjamin A. and Cristea, Ileana M.},
  title = {The Impact of Mass Spectrometry{\textendash}Based Proteomics on Fundamental Discoveries in Virology},
@@ -879,6 +1002,19 @@
  doi = {10.1016/j.jenvman.2019.05.011}
 }
 
+@article{Hershberger_1994,
+ author = {Hershberger, P A and LaCount, D J and Friesen, P D},
+ title = {The apoptotic suppressor P35 is required early during baculovirus replication and is targeted to the cytosol of infected cells.},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {1994},
+ number = {6},
+ volume = {68},
+ pages = {3467--3477},
+ url = {https://doi.org/10.1128%2Fjvi.68.6.3467-3477.1994},
+ doi = {10.1128/jvi.68.6.3467-3477.1994}
+}
+
 @article{Hill_2017,
  author = {Hill, Tom and Unckless, Robert L.},
  title = {Baculovirus Molecular Evolution via Gene Turnover and Recurrent Positive Selection of Key Genes},
@@ -958,6 +1094,20 @@
  url = {https://doi.org/10.1371%2Fjournal.pone.0153365},
  doi = {10.1371/journal.pone.0153365},
  editor = {Lopez-Ferber, Miguel}
+}
+
+@article{Hu_2013,
+ author = {Hu, Yuan and Li, Lu-Lin},
+ title = {The p35 and ie1 of Autographa californica multiple nucleopolyhedrovirus could rescue late gene expression of Plutella xylostella granulovirus in nonpermissive cell lines},
+ journal = {Virus Genes},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2013},
+ month = {dec},
+ number = {2},
+ volume = {48},
+ pages = {343--355},
+ url = {https://doi.org/10.1007%2Fs11262-013-1024-x},
+ doi = {10.1007/s11262-013-1024-x}
 }
 
 @article{Huang_2020,
@@ -1216,6 +1366,31 @@ in China and comparisons with other noctuid larvae in cornfields using molecular
  editor = {Crandall, Keith}
 }
 
+@incollection{Kost_2016,
+ author = {Kost, Thomas A. and Kemp, Christopher W.},
+ title = {Fundamentals of Baculovirus Expression and Applications},
+ publisher = {Springer International Publishing},
+ year = {2016},
+ pages = {187--197},
+ url = {https://doi.org/10.1007%2F978-3-319-27216-0_12},
+ doi = {10.1007/978-3-319-27216-0_12},
+ booktitle = {Advanced Technologies for Protein Complex Production and Characterization}
+}
+
+@article{L_pez_2018,
+ author = {López, M. G. and Diez, M. and Alfonso, V. and Taboga, O.},
+ title = {Biotechnological applications of occlusion bodies of Baculoviruses},
+ journal = {Applied Microbiology and Biotechnology},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2018},
+ month = {jun},
+ number = {16},
+ volume = {102},
+ pages = {6765--6774},
+ url = {https://doi.org/10.1007%2Fs00253-018-9130-2},
+ doi = {10.1007/s00253-018-9130-2}
+}
+
 @article{L_pez_Ferber_2003,
  author = {L{\'{o}}pez-Ferber, Miguel and Sim{\'{o}}n, Oihane and Williams, Trevor and Caballero, Primitivo},
  title = {Defective or effective? Mutualistic interactions between virus genotypes},
@@ -1228,6 +1403,20 @@ in China and comparisons with other noctuid larvae in cornfields using molecular
  pages = {2249--2255},
  url = {https://doi.org/10.1098%2Frspb.2003.2498},
  doi = {10.1098/rspb.2003.2498}
+}
+
+@article{L_ry_1997,
+ author = {Léry, Xavier and Giannotti, Joseph and Taha, Ahmed and Ravalec, Marc and Abol-Ela, Said},
+ title = {Multiplication of a granulosis virus isolated from the potato tuber moth in a new established cell line of Phthorimaea operculella},
+ journal = {In Vitro Cellular & Developmental Biology - Animal},
+ publisher = {Springer Science and Business Media LLC},
+ year = {1997},
+ month = {aug},
+ number = {8},
+ volume = {33},
+ pages = {640--646},
+ url = {https://doi.org/10.1007%2Fs11626-997-0115-1},
+ doi = {10.1007/s11626-997-0115-1}
 }
 
 @article{Lacey_2002,
@@ -1490,6 +1679,20 @@ Spodoptera frugiperda
  doi = {10.1128/jvi.00035-11}
 }
 
+@article{Marek_2013,
+ author = {Marek, M. and Romier, C. and Galibert, L. and Merten, O. -W. and van Oers, M. M.},
+ title = {Baculovirus VP1054 Is an Acquired Cellular PUR~, a Nucleic Acid-Binding Protein Specific for GGN Repeats},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {2013},
+ month = {may},
+ number = {15},
+ volume = {87},
+ pages = {8465--8480},
+ url = {https://doi.org/10.1128%2Fjvi.00068-13},
+ doi = {10.1128/jvi.00068-13}
+}
+
 @article{Mart_nez_2004,
  author = {Mart{\'{\i}}nez, Ana-Mabel and Caballero, Primitivo and Villanueva, Maider and Miralles, Nagore and Mart{\'{\i}}n, Ivan San and L{\'{o}}pez, Est{\'{\i}}baliz and Williams, Trevor},
  title = {Formulation with an Optical Brightener Does Not Increase Probability of Developing Resistance to Spodoptera frugiperda Nucleopolyhedrovirus in the Laboratory},
@@ -1517,6 +1720,20 @@ Spodoptera frugiperda
  url = {https://doi.org/10.1371%2Fjournal.pone.0207735},
  doi = {10.1371/journal.pone.0207735},
  editor = {Ward, Brian M.}
+}
+
+@article{Matindoost_2015,
+ author = {Matindoost, Leila and Nielsen, Lars and Reid, Steve},
+ title = {Intracellular Trafficking of Baculovirus Particles: A Quantitative Study of the HearNPV/HzAM1 Cell and AcMNPV/Sf9 Cell Systems},
+ journal = {Viruses},
+ publisher = {MDPI AG},
+ year = {2015},
+ month = {may},
+ number = {5},
+ volume = {7},
+ pages = {2288--2307},
+ url = {https://doi.org/10.3390%2Fv7052288},
+ doi = {10.3390/v7052288}
 }
 
 @article{McCarthy_2008,
@@ -1658,6 +1875,20 @@ Spodoptera frugiperda
  doi = {10.1128/jvi.00490-08}
 }
 
+@article{Naser_1984,
+ author = {Naser, W. L. and Miltenburger, H. G. and Harvey, J. P. and Huber, J. and Huger, A. M.},
+ title = {In vitro replication of theCydia pomonella(codling moth) granulosis virus},
+ journal = {FEMS Microbiology Letters},
+ publisher = {Oxford University Press (OUP)},
+ year = {1984},
+ month = {sep},
+ number = {1},
+ volume = {24},
+ pages = {117--121},
+ url = {https://doi.org/10.1111%2Fj.1574-6968.1984.tb01256.x},
+ doi = {10.1111/j.1574-6968.1984.tb01256.x}
+}
+
 @article{Nesvizhskii_2014,
  author = {Nesvizhskii, Alexey I},
  title = {Proteogenomics: concepts, applications and computational strategies},
@@ -1670,6 +1901,20 @@ Spodoptera frugiperda
  pages = {1114--1125},
  url = {https://doi.org/10.1038%2Fnmeth.3144},
  doi = {10.1038/nmeth.3144}
+}
+
+@article{Nguyen_2016,
+ author = {Nguyen, Quan and TB.Tran, Trinh and Chan, Leslie CL and Nielsen, Lars K and Reid, Steven},
+ title = {In vitro production of baculoviruses: identifying host and virus genes associated with high productivity},
+ journal = {Applied Microbiology and Biotechnology},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2016},
+ month = {sep},
+ number = {21},
+ volume = {100},
+ pages = {9239--9253},
+ url = {https://doi.org/10.1007%2Fs00253-016-7774-3},
+ doi = {10.1007/s00253-016-7774-3}
 }
 
 @article{Nguyen_2018,
@@ -1710,6 +1955,20 @@ Spodoptera frugiperda
  pages = {73--78},
  url = {https://doi.org/10.1016%2Fj.coviro.2014.07.002},
  doi = {10.1016/j.coviro.2014.07.002}
+}
+
+@article{Ogay_2006,
+ author = {Ogay, I. D. and Lihoradova, O. A. and Azimova, Sh. S. and Abdukarimov, A. A. and Slack, J. M. and Lynn, D. E.},
+ title = {Transfection of insect cell lines using polyethylenimine},
+ journal = {Cytotechnology},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2006},
+ month = {nov},
+ number = {2},
+ volume = {51},
+ pages = {89--98},
+ url = {https://doi.org/10.1007%2Fs10616-006-9022-7},
+ doi = {10.1007/s10616-006-9022-7}
 }
 
 @article{Ohkawa_2010,
@@ -2108,6 +2367,17 @@ Spodoptera frugiperda
  doi = {10.1126/science.356.6337.473}
 }
 
+@incollection{Summers_2006,
+ author = {Summers, Max D.},
+ title = {Milestones Leading to the Genetic Engineering of Baculoviruses as Expression Vector Systems and Viral Pesticides},
+ publisher = {Elsevier},
+ year = {2006},
+ pages = {3--73},
+ url = {https://doi.org/10.1016%2Fs0065-3527%2806%2968001-9},
+ doi = {10.1016/s0065-3527(06)68001-9},
+ booktitle = {Advances in Virus Research}
+}
+
 @article{Szewczyk_2006,
  author = {Szewczyk, Boguslaw and Hoyos-Carvajal, Liliana and Paluszek, Maria and Skrzecz, Iwona and de Souza, Marlinda Lobo},
  title = {Baculoviruses {\textemdash} re-emerging biopesticides},
@@ -2219,6 +2489,17 @@ Spodoptera frugiperda
  doi = {10.1128/jvi.63.5.2008-2018.1989}
 }
 
+@incollection{Thompson_2016,
+ author = {Thompson, Christine M. and Montes, Johnny and Aucoin, Marc G. and Kamen, Amine A.},
+ title = {Recombinant Protein Production in Large-Scale Agitated Bioreactors Using the Baculovirus Expression Vector System},
+ publisher = {Springer New York},
+ year = {2016},
+ pages = {241--261},
+ url = {https://doi.org/10.1007%2F978-1-4939-3043-2_11},
+ doi = {10.1007/978-1-4939-3043-2_11},
+ booktitle = {Methods in Molecular Biology}
+}
+
 @article{Tweeten_1980,
  author = {Tweeten, Kathleen A. and Bulla, Lee A. and Consigli, Richard A.},
  title = {Characterization of an Extremely Basic Protein Derived from Granulosis Virus Nucleocapsids {\textdagger}},
@@ -2272,6 +2553,34 @@ Spodoptera frugiperda
  pages = {1051--1068},
  url = {https://doi.org/10.2174%2F138945007782151333},
  doi = {10.2174/138945007782151333}
+}
+
+@article{van_Oers_2015,
+ author = {van Oers, Monique M. and Pijlman, Gorben P. and Vlak, Just M.},
+ title = {Thirty years of baculovirus–insect cell protein expression: from dark horse to mainstream technology},
+ journal = {Journal of General Virology},
+ publisher = {Microbiology Society},
+ year = {2015},
+ month = {jan},
+ number = {1},
+ volume = {96},
+ pages = {6--23},
+ url = {https://doi.org/10.1099%2Fvir.0.067108-0},
+ doi = {10.1099/vir.0.067108-0}
+}
+
+@article{Vanarsdall_2004,
+ author = {Vanarsdall, Adam L and Okano, Kazuhiro and Rohrmann, G. F},
+ title = {Characterization of a baculovirus with a deletion of vlf-1},
+ journal = {Virology},
+ publisher = {Elsevier BV},
+ year = {2004},
+ month = {aug},
+ number = {1},
+ volume = {326},
+ pages = {191--201},
+ url = {https://doi.org/10.1016%2Fj.virol.2004.06.003},
+ doi = {10.1016/j.virol.2004.06.003}
 }
 
 @article{Vidick_2013,
@@ -2496,6 +2805,20 @@ Spodoptera frugiperda
  doi = {10.1093/nar/gks918}
 }
 
+@article{Winstanley_1993,
+ author = {Winstanley, D. and Crook, N. E.},
+ title = {Replication of Cydia pomonella granulosis virus in cell cultures},
+ journal = {Journal of General Virology},
+ publisher = {Microbiology Society},
+ year = {1993},
+ month = {aug},
+ number = {8},
+ volume = {74},
+ pages = {1599--1609},
+ url = {https://doi.org/10.1099%2F0022-1317-74-8-1599},
+ doi = {10.1099/0022-1317-74-8-1599}
+}
+
 @article{Wolff_2008,
  author = {Wolff, José Luiz Caldas and Valicente, Fernando Hercos and Martins, Renata and Castro Oliveira, Juliana Velasco de and Andrade Zanotto, Paolo Marinho de},
  title = {Analysis of the genome of Spodoptera frugiperda nucleopolyhedrovirus (SfMNPV-19) and of the high genomic heterogeneity in group II nucleopolyhedroviruses},
@@ -2564,6 +2887,20 @@ Spodoptera frugiperda
  pages = {2495--2503},
  url = {https://doi.org/10.1002%2Fps.4644},
  doi = {10.1002/ps.4644}
+}
+
+@article{Yin_2008,
+ author = {Yin, Feifei and Wang, Manli and Tan, Ying and Deng, Fei and Vlak, Just M. and Hu, Zhihong and Wang, Hualin},
+ title = {A Functional F Analogue of Autographa californica Nucleopolyhedrovirus GP64 from the Agrotis segetum Granulovirus},
+ journal = {Journal of Virology},
+ publisher = {American Society for Microbiology},
+ year = {2008},
+ month = {jun},
+ number = {17},
+ volume = {82},
+ pages = {8922--8926},
+ url = {https://doi.org/10.1128%2Fjvi.00493-08},
+ doi = {10.1128/jvi.00493-08}
 }
 
 @article{Yuan_2008,
