Reorganized chapters to include new sections

--- a/source/preamble.tex
+++ b/source/preamble.tex
@@ -25,6 +25,8 @@
 \renewcommand{\headrulewidth}{1pt} 
 % Set footer ruler to 1pt
 \renewcommand{\footrulewidth}{1pt}
+
+% New commands to put figure into landscape
 \usepackage{pdflscape}
 \newcommand{\blandscape}{\begin{landscape}}
 \newcommand{\elandscape}{\end{landscape}}
